syntax = "proto3";

package user;

service UserService {
  rpc CreateUser (User) returns (User);
  rpc ListUsers (Empty) returns (UserList);
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message UserList {
  repeated User users = 1;
}

message Empty {} 